Minor fix, use Java 11 api