@@ -10,8 +10,8 @@ import static org.junit.Assert.assertFalse;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.gbif.api.model.pipelines.InterpretationType.RecordType;
@@ -69,8 +69,8 @@ public class IdentifierCallbackIT {
         new PipelinesVerbatimMessage(
             uuid,
             attempt,
-            Collections.singleton(RecordType.ALL.name()),
-            Collections.singleton(VERBATIM_TO_INTERPRETED.name()),
+            Set.of(RecordType.ALL.name()),
+            Set.of(VERBATIM_TO_INTERPRETED.name()),
             DISTRIBUTED.name(),
             EndpointType.DWC_ARCHIVE,
             null,
@@ -131,8 +131,8 @@ public class IdentifierCallbackIT {
         new PipelinesVerbatimMessage(
             uuid,
             attempt,
-            Collections.singleton(RecordType.ALL.name()),
-            Collections.singleton(VERBATIM_TO_IDENTIFIER.name()),
+            Set.of(RecordType.ALL.name()),
+            Set.of(VERBATIM_TO_IDENTIFIER.name()),
             DISTRIBUTED.name(),
             EndpointType.DWC_ARCHIVE,
             null,
