@@ -8,9 +8,9 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import org.gbif.common.messaging.api.messages.PipelinesArchiveValidatorMessage;
 import org.gbif.dwc.terms.DwcTerm;
@@ -265,7 +265,7 @@ public class ArchiveValidatorCallbackIT {
         new PipelinesArchiveValidatorMessage(
             uuid,
             attempt,
-            Collections.singleton(VALIDATOR_VALIDATE_ARCHIVE.name()),
+            Set.of(VALIDATOR_VALIDATE_ARCHIVE.name()),
             EXECUTION_ID,
             FileFormat.DWCA.name());
 
@@ -297,7 +297,7 @@ public class ArchiveValidatorCallbackIT {
         new PipelinesArchiveValidatorMessage(
             uuid,
             attempt,
-            Collections.singleton(VALIDATOR_VALIDATE_ARCHIVE.name()),
+            Set.of(VALIDATOR_VALIDATE_ARCHIVE.name()),
             EXECUTION_ID,
             FileFormat.DWCA.name());
 
@@ -329,7 +329,7 @@ public class ArchiveValidatorCallbackIT {
         new PipelinesArchiveValidatorMessage(
             uuid,
             attempt,
-            Collections.singleton(VALIDATOR_VALIDATE_ARCHIVE.name()),
+            Set.of(VALIDATOR_VALIDATE_ARCHIVE.name()),
             EXECUTION_ID,
             FileFormat.DWCA.name());
 
@@ -361,7 +361,7 @@ public class ArchiveValidatorCallbackIT {
         new PipelinesArchiveValidatorMessage(
             uuid,
             attempt,
-            Collections.singleton(VALIDATOR_VALIDATE_ARCHIVE.name()),
+            Set.of(VALIDATOR_VALIDATE_ARCHIVE.name()),
             EXECUTION_ID,
             FileFormat.DWCA.name());
 
