@@ -1,7 +1,6 @@
 package org.gbif.pipelines.core.converters;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -159,7 +158,7 @@ public class MeasurementOrFactTableConverterTest {
     ext1.put(DwcTerm.measurementDeterminedDate.qualifiedName(), "2010/2011");
 
     Map<String, List<Map<String, String>>> ext = new HashMap<>();
-    ext.put(Extension.MEASUREMENT_OR_FACT.getRowType(), Collections.singletonList(ext1));
+    ext.put(Extension.MEASUREMENT_OR_FACT.getRowType(), List.of(ext1));
 
     ExtendedRecord extendedRecord =
         ExtendedRecord.newBuilder().setId("id").setExtensions(ext).build();
